fix / hover card, unfollow + join - keep hover card visible

--- a/public/css/components/card.less
+++ b/public/css/components/card.less
@@ -256,6 +256,10 @@
  * card-small
  * =========================================================================== */
 .card-small {
+  &.has-actions .card-inner {
+    min-height: initial;
+  }
+
   .card_background-image-wrapper {
     height: 80px;
   }
